-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0
-
Windows
-
3e9895f3de7f118beab3068b938ff6b9f2f5ef73 (qt/qtbase/5.15)
If we have check box in Combo Box drop down items and change the style to fusion. check boxes are not drawn.
Attached example can reproduce it.
- is duplicated by
-
QTBUG-37176 Can't view checkbox in QComboBox on Ubuntu
-
- Closed
-
-
QTBUG-19683 QCleanlooksStyle is the only style not drawing checkboxes in QComboBox
-
- Closed
-
-
QTBUG-49260 QCheckBox Item In QComboBox
-
- Closed
-
-
QTBUG-50320 QComboBox and checkable QStandardItem
-
- Closed
-
-
QTBUG-73697 QComboBox does not show checkboxes
-
- Closed
-
-
PYSIDE-976 Checkboxes in a QCombobox
-
- Closed
-
-
QTBUG-27837 Fusion style does not draw check boxes in combo box
-
- Closed
-
| For Gerrit Dashboard: QTBUG-60310 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 283448,5 | Support checkable QComboBox items with styles using a popup dropdown | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |